# RustifyDL

./: .gitignore  Cargo.toml  README.md  rustypipe_cache.json
.github/workflows/: ci.yml  release.yml
src/: lib.rs  metadata.rs  spotify.rs  youtube.rs
yt-dlp/: Cargo.toml  README.md
yt-dlp/src/: error.rs  lib.rs
yt-dlp/src/cache/: mod.rs
yt-dlp/src/executor/: mod.rs
yt-dlp/src/fetcher/: download_manager.rs  mod.rs  streams.rs  thumbnail.rs
yt-dlp/src/metadata/: mod.rs
yt-dlp/src/model/: caption.rs  format.rs  format_selector.rs  mod.rs  thumbnail.rs
yt-dlp/src/model/utils/: mod.rs
yt-dlp/src/utils/: file_system.rs  mod.rs  platform.rs
